<resources>
    <string name="app_name">Listening Demo</string>
    <string name="ButtonListen">Gravar</string>
    <string name="ButtonSample">Gerar Amostra</string>
    <string name="ButtonSeeLogs">Ver Logs</string>
    <string name="ButtonSeeInternet">Testar Internet</string>
    <string name="TextExit">Sair</string>
    <string name="TextListening">Gravando...</string>
    <string name="TextSample">Gravando Amostra...</string>
    <string name="ButtonStart">Iniciar</string>
    <string name="ButtonStop">Parar</string>
    <string name="TitleLogs">Logs</string>
    <string name="TitleCompare">Resultado da Comparação</string>
    <string name="TitleSendSample">Enviar Amostra</string>
    <string name="ButtonClose">Fechar</string>
    <string name="Move2Disclaimer">Move 2 The Next Level</string>
    <string name="ButtonPlayRecord"><![CDATA[I> Play Gravação]]></string>
    <string name="ButtonPlaySample"><![CDATA[I> Play Amostra]]></string>
    <string name="SampleName">Digite o nome da amostra:</string>
    <string name="ButtonSend">Enviar</string>
    <string name="ButtonCancel">Cancelar</string>
    <string name="ButtonNotify">Notificar</string>
    <string name="TextNotification">Lista de Notificações</string>
    <string name="ButtonClear">Apagar</string>
    <string name="ButtonRecognizeSpeech">Reconhecer Fala</string>
    <string name="TitleSpeechRecognize">Reconhecimento de Fala</string>
</resources>
