<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundDefault"
    tools:context="br.com.move2.listeningdemo.MainActivity">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/Move2Disclaimer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/move2logo" />

    <TextView
        android:id="@+id/headerSendSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/TitleSendSample"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo1"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textLabelSampleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="36dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/SampleName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerSendSample"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/textSampleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelSampleName" />

    <Button
        android:id="@+id/buttonSendSample"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/BackgroundButtons"
        android:text="@string/ButtonSend"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSampleName" />

    <Button
        android:id="@+id/buttonCancelSendSample"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/BackgroundButtons"
        android:text="@string/ButtonCancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSendSample" />

    <WebView
        android:id="@+id/webSendSample"
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerSendSample" />

    <Button
        android:id="@+id/buttonCloseSendSample"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/BackgroundButtons"
        android:text="@string/ButtonClose"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webSendSample" />


</android.support.constraint.ConstraintLayout>
